<resources>
    <string name="app_name">오늘의 뉴스</string>
    <string name="thumbnail_image">Thumbnail Image</string>

    <string name="splash_desc1">최신 뉴스를 제공합니다.</string>
    <string name="splash_desc2">뉴스의 키워드를 알아보세요</string>
    <string name="splash_desc3">뉴스를 클릭하면 원본 뉴스를 볼 수 있습니다.</string>
    <string name="app_version">v 1.0</string>

    <string name="desc_ic_news">news icon</string>
    <string name="desc_ic_internet">internet icon</string>
    <string name="desc_ic_wifi">wifi icon</string>

    <string name="error_fail_to_fetch">뉴스 정보를 가져올 수 없습니다 :( \n먼저 네트워크 연결을 확인해 주세요. \n네트워크 연결 중에도 오류가 발생한다면 문의를 남겨주세요.</string>
</resources>
